# tenseur

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
Ten/: Config.hxx  Distributions.hxx  Expr.hxx  Functional.hxx  Random.hxx  Shape.hxx  SharedLib.hxx  Tensor  Tensor.cxx  Tensor.hxx  Types.hxx  UntypedTensor.hxx  Utils.hxx
Ten/Kernels/: BinaryOps.hxx  BlasAPI.hxx  Host
Ten/Kernels/.ipynb_checkpoints/: Mul-checkpoint.hxx
Ten/Storage/: DenseStorage.hxx
benchmarks/: CMakeLists.txt
benchmarks/eigen/: CMakeLists.txt  EigenBench.cxx
benchmarks/tenseur/: CMakeLists.txt  TenseurBench.cxx
benchmarks/torch/: CMakeLists.txt  TorchBench.cxx
bindings/: CMakeLists.txt
bindings/python/: CMakeLists.txt
bindings/python/tenseur/: Tensor.py  __init__.py
cmake/: FindSphinx.cmake
cpp/: Untitled.ipynb  Untitled1.ipynb  a.out  axpy.cxx  binary_expr.cxx  blas.cxx  cast.cxx  chain_mul.cxx  cholesky.cxx  comparisons.cxx  complex.cxx  copy.cxx  cum_sum.cxx  df.cxx  df_read_write.cxx  diag.cxx  diag_to_dense.cxx  dot_product.cxx  expressions.cxx  expressions_matching.cxx  f.cxx  floor_ceil.cxx  gemm.cxx  grad.cxx  graph.cxx  graph_list.cxx  hist.cxx  identity.cxx  init.cxx  inv.cxx  least_squares.cxx  like.cxx  linalg.cxx  linear_system.cxx  log.cxx  lu.cxx  main.cxx  mat.mtx  matrix_norm.cxx  net.cxx  (+25 more)
docs/: CMakeLists.txt
docs/source/: advanced.rst  api_reference.rst  benchmarks.rst  conf.py  examples.rst  functions.rst  getting_started.rst  index.rst  initialization.rst  installation.rst  linear_algebra.rst  multilinear_algebra.rst  neural.rst  torch_numpy.rst
examples/: CMakeLists.txt  Cholesky.cxx  Expr.cxx  LU.cxx  NeuralNetworksXOR.cxx  QR.cxx  SVD.cxx  SolveLinearSystem.cxx  Tensor.cxx
examples/Expr/: CMakeLists.txt  CMakeLists.txt_  Expr.cxx  Untyped.cxx  main.py
examples/Tensor/: CMakeLists.txt  Tensor.cxx
ten/: autograd.hxx  config.hxx  dataframe  dataframe.hxx  diff.hxx  distributions.hxx  expr.hxx  functional.hxx  functional_types.hxx  functions.hxx  graph  io  linalg  matching.hxx  nn  ntheory  optim  optim.hxx  quasi_random.hxx  random.hxx  shape.hxx  shared_lib.hxx  sort.hxx  special_functions.hxx  tensor  tensor.cxx  tensor.hxx  test.hxx  types.hxx  utils.hxx
ten/dataframes/: dataframe.hxx  datasets.hxx  io.hxx
ten/graph_theory/: gmatrix.hxx  types.hxx
ten/graphs/: glist.hxx  gmatrix.hxx  gweighted.hxx
ten/ios/: expr.hxx  mtx.hxx  serialization.hxx  tensor.hxx
ten/kernels/: binary_ops.hxx  blas_api.hxx  blas_functions.hxx  host  inplace_functions.hxx  lapack_api.hxx  mul.hxx  trigonometrics.hxx
ten/learning/: histogram.hxx
ten/linalgebra/: factorization.hxx  least_squares.hxx  linalgebra.hxx
ten/linear_algebra/: factorization.hxx  least_squares.hxx  linear_algebra.hxx  subtitution.hxx
ten/neural/: activations.hxx  dense.hxx  net.hxx
ten/number_theory/: sieve.hxx
ten/storage/: dense_storage.hxx  diagonal_storage.hxx  sparse_storage.hxx
tests/: CMakeLists.txt
tests/Distributions/: CMakeLists.txt  Dist.hxx  Ref.hxx  TestDistributions.cxx
tests/Expr/: BasicFunctions.hxx  BinaryOps.hxx  CMakeLists.txt  Ref.hxx  TestExpr.cxx
tests/LinearAlgebra/: CMakeLists.txt  LinearAlgebra.hxx  TestLinearAlgebra.cxx
tests/Ten/: Tests.hxx
tests/Tensor/: CMakeLists.txt  Cast.hxx  Random.hxx  TestTensor.cxx  Traits.hxx
tests/Utils/: CMakeLists.txt  TestUtils.cxx  Utils.hxx
tests/bindings/python/: Tensor.py
tests/ten/: tests.hxx
